@@ -4,9 +4,7 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -22,10 +20,28 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package jdk.internal.vm;
 
 /*
- * Support class used for filling small dead areas.
+ * @test
+ * @bug 8286797
+ * @summary  Guards of constant value false are not permitted
+ * @compile/fail/ref=T8286797.out --enable-preview -source ${jdk.version} -XDrawDiagnostics -XDshould-stop.at=FLOW T8286797.java
  */
-class FillerObject {
+
+public class T8286797 {
+
+    public void testWithConstant(Object o) {
+        switch (o) {
+            case String s when false -> {}
+            default -> {}
+        }
+    }
+
+    public void testWithSimpleName(Object o) {
+        final int x = 0;
+        switch (o) {
+            case String s when x == 42 -> {}
+            default -> {}
+        }
+    }
 }
